--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+<!--  <div id="test">-->
+
+<!--  </div>-->
+<!--  <script type="text/babel">-->
+<!--    const test=<h1>陈信宏 老子爱你啊</h1>;-->
+<!--    ReactDOM.render(-->
+<!--            test,-->
+<!--            document.getElementById('test')-->
+<!--    );-->
+
+<!--  </script>-->
   </body>
 </html>
